AAP-31661: Incorporated peer review feedback

--- a/downstream/titles/release-notes/topics/aap-25-changed-features.adoc
+++ b/downstream/titles/release-notes/topics/aap-25-changed-features.adoc
@@ -10,13 +10,13 @@ The following table provides information about features that are changed in {Pla
 | Component | Feature
 
 |{HubNameStart}
-|Error codes are now changed from 403 to 401. Any API client usage relying on specific status codes 403 versus 401 will have to update their logic. Standard UI usage will work as expected.
+|Error codes are now changed from 403 to 401. Any API client usage relying on specific status code 403 versus 401 will have to update their logic. Standard UI usage will work as expected.
 
 |{EDAName}
 |The endpoints `/extra_vars` are now moved to a property within `/activations`. 
 
 |{EDAName}
-|The endpoint `/credentials was` replaced with `/eda-credentials`. This is part of an expanded credentials capability for {EDAName}. For more information, see the chapter link:https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.4/html/event-driven_ansible_controller_user_guide/eda-credentials[Setting up credentials for {EDAcontroller}] in the _{EDAcontroller} user guide_.
+|The endpoint `/credentials` was replaced with `/eda-credentials`. This is part of an expanded credentials capability for {EDAName}. For more information, see the chapter link:https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.4/html/event-driven_ansible_controller_user_guide/eda-credentials[Setting up credentials for {EDAcontroller}] in the _{EDAcontroller} user guide_.
 
 |{EDAName}
 |{EDAName} can no longer add, edit, or delete the platform gateway-managed resources. Creating, editing, or deleting organizations, teams, or users is available through platform gateway endpoints only. The platform gateway endpoints also enable you to edit organization or team memberships and configure external authentication. 
