--- a/downstream/titles/release-notes/topics/aap-25-deprecated-features.adoc
+++ b/downstream/titles/release-notes/topics/aap-25-deprecated-features.adoc
@@ -42,7 +42,7 @@ The platform gateway is the service that handles authentication and authorizatio
 |The string parameter `keepcache` in the `yum_repository` is deprecated.
 
 |Ansible-core
-|The `required` parameter in the API *ansible.module_utils.common.process.get_bin_path* is deprecated.
+|The `required` parameter in the API `ansible.module_utils.common.process.get_bin_path` is deprecated.
 
 |Ansible-core
 |`module_utils` - Importing the following convenience helpers from `ansible.module_utils.basic` has been deprecated: +
@@ -70,27 +70,27 @@ API endpoints that will be removed in a future release either because their func
 | Component | Endpoint | Capability
 
 |{ControllerNameStart}
-|*/api/o*
+|`*/api/o*`
 |Token authentication is moving to the platform gateway.
 
 |{HubNameStart}
-|*/api/login/keycloak*
+|`*/api/login/keycloak*`
 |Moving to the platform gateway.
 
 |{HubNameStart}
-|*/api/v3/auth/token*
+|`*/api/v3/auth/token*`
 |Token authentication used for pulling collections will migrate to the platform gateway tokens.
 
 |{ControllerNameStart}
-|*/api/v2/organizations*
+|`*/api/v2/organizations*`
 |Moving to the platform gateway.
 
 |{ControllerNameStart}
-|*/api/v2/teams*
+|`*/api/v2/teams*`
 |Moving to the platform gateway.
 
 |{ControllerNameStart}
-|*/api/v2/users*
+|`*/api/v2/users*`
 |Moving to the platform gateway.
 
 |===
