--- a/downstream/titles/release-notes/topics/aap-25-fixed-issues.adoc
+++ b/downstream/titles/release-notes/topics/aap-25-fixed-issues.adoc
@@ -35,9 +35,9 @@ This section provides information about fixed issues in {PlatformNameShort} 2.5.
 
 * *XDG_RUNTIME_DIR* is now defined when applying {EDAName} linger settings for Podman. (AAP-18341)*
 
-* Fixed an issue where the restore process failed to stop pulpcore-worker services on RHEL 9. (AAP-12829)
+* Fixed an issue where the restore process failed to stop *pulpcore-worker* services on RHEL 9. (AAP-12829)
 
-* Fixed Postgres sslmode for verify-full that affected external Postgres and Postgres signed for 127.0.0.1 for internally managed Postgres. (AAP-7107)
+* Fixed Postgres *sslmode* for verify-full that affected external Postgres and Postgres signed for 127.0.0.1 for internally managed Postgres. (AAP-7107)
 
 * Fixed support for {HubName} content signing. (AAP-9739)
 
