AAP-32141 Add Installing on Operator chapter to RHDH install guide

--- a/downstream/modules/devtools/proc-rhdh-configure-aap-details.adoc
+++ b/downstream/modules/devtools/proc-rhdh-configure-aap-details.adoc
@@ -13,7 +13,8 @@ The Ansible plug-ins continue to function regardless of the {PlatformNameShort} 
 .Procedure
 
 . Create a Personal Access Token (PAT) with “Read” scope in automation controller, following the
-link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_user_guide/index#assembly-controller-applications[Applications] section of the _Automation controller user guide_. 
+link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_user_guide/assembly-controller-applications#proc-controller-apps-create-tokens[Adding tokens]
+section of the _Automation controller user guide_. 
 . Edit your custom {RHDH} config map, for example `app-config-rhdh`.
 . Add your {PlatformNameShort} details to `app-config-rhdh.yaml`.
 ..  Set the `baseURL` key with your automation controller URL.
