--- a/downstream/modules/devtools/proc-rhdh-create-plugin-registry.adoc
+++ b/downstream/modules/devtools/proc-rhdh-create-plugin-registry.adoc
@@ -3,7 +3,7 @@
 [id="rhdh-create-plugin-registry_{context}"]
 = Creating a plug-in registry
 
-Set up a plug-in registry in your OpenShift cluster to host the Ansible plug-ins and make them available for installation in Red Hat Developer Hub.
+Set up a plug-in registry in your OpenShift cluster to host the {AAPRHDHShort} and make them available for installation in {RHDH} ({RHDHShort}).
 
 .Procedure
 
@@ -36,11 +36,9 @@ image::rhdh-plugin-registry.png[Developer perspective]
 . In the terminal, run `ls` to confirm that the .tar files are in the plugin registry.
 +
 ----
-sh-4.45 $1s -l
-total 3392
--rw-rw-r-- 1 default root 3376269 Jul 22 13:48 ansible-plugin-backstagc-rhaap-1.0.0.tgz
--rw-rw-r-- 1 default root 25156 Jul 22 13:48 ansible-plugin-backstage-rhaap-backend-1.0.0.tgz
--rw-rw-r-- 1 default root 61520 Jul 22 13:48 ansible-plugin-scaffolder-backend-modulc-backstagc-rhaap-1.0.0.tgz
+ansible-plugin-backstagc-rhaap-x.y.z.tgz
+ansible-plugin-backstage-rhaap-backend-x.y.z.tgz
+ansible-plugin-scaffolder-backend-modulc-backstagc-rhaap-x.y.z.tgz
 ----
 +
 The version numbers and file names can differ.
