Revert "2.4 Fix URL attribute to use multi-page on docs.redhat.com (#2119)"
This reverts commit 5b7d1efdffe29403be96aca96825ea2cb27e5108.

--- a/downstream/modules/devtools/proc-devtools-working-with-ee.adoc
+++ b/downstream/modules/devtools/proc-devtools-working-with-ee.adoc
@@ -31,6 +31,6 @@ For more information about working with execution environments locally, see
 link:{LinkBuilder}.
 
 After customizing your execution environment, you can push your new image to the container registry in automation hub. See
-link:{URLBuilder}/assembly-publishing-exec-env[Publishing an automation execution environment]
+link:{URLBuilder}/index#assembly-publishing-exec-env[Publishing an automation execution environment]
 in the _{TitleBuilder}_ documentation.
 
