--- a/downstream/modules/platform/proc-scm-git-subversion.adoc
+++ b/downstream/modules/platform/proc-scm-git-subversion.adoc
@@ -12,7 +12,7 @@
 
 . Enter the appropriate details into the following fields:
 
-* *Source control uRL* - See an example in the tooltip .
+* *Source control URL* - See an example in the tooltip .
 * Optional: *Source control branch/tag/commit*: Enter the SCM branch, tags, commit hashes, arbitrary refs, or revision number (if applicable) from the source control (Git or Subversion) to checkout. 
 Some commit hashes and references might not be available unless you also give a custom refspec in the next field. 
 If left blank, the default is `HEAD` which is the last checked out Branch, Tag, or Commit for this project.
