--- a/downstream/modules/platform/ref-controller-playbook-run-search.adoc
+++ b/downstream/modules/platform/ref-controller-playbook-run-search.adoc
@@ -7,7 +7,7 @@ To filter only certain hosts with a particular status, specify one of the follow
 
 ok:: Indicates that a task completed successfully but no change was executed on the host.
 changed:: The playbook task executed. 
-Since Ansible tasks should be written to be idempotent, tasks might exit successfully without executing anything on the host. 
+Since Ansible tasks should be written to be idempotent, tasks can exit successfully without executing anything on the host. 
 In these cases, the task returns *ok*, but not *changed*.
 failed:: The task failed. 
 Further playbook execution stopped for this host.
