Pre-release updates to Using automation execution (#1952)
* Pre-release updates to Using automation execution

https://issues.redhat.com/browse/AAP-31370

Affects `titles/controller-user-guide`

* Second commit

* Further edits to 2.5 controller docs

* Fourth commit to user guide

* Fifth commit to UG

* Peer review edits

--- a/downstream/assemblies/platform/assembly-ug-controller-jobs.adoc
+++ b/downstream/assemblies/platform/assembly-ug-controller-jobs.adoc
@@ -2,7 +2,7 @@
 
 = Jobs in {ControllerName}
 
-A job is an instance of {ControllerName} launching an Ansible playbook against an inventory of hosts.
+A job is an instance of {ControllerName} launching an Ansible Playbook against an inventory of hosts.
 
 The *Jobs* list view displays a list of jobs and their statuses, shown as completed successfully, failed, or as an active (running) job. 
 The default view is collapsed (Compact) with the job name, status, job type, start, and finish times. 
@@ -27,7 +27,7 @@ image::ug-job-details-view-filters.png[Job details view filters]
 * The *Event*  option in the *Search output* list enables you to filter by the events of interest, such as errors, host failures, host retries, and items skipped. 
 You can include as many events in the filter as necessary.
 //* The *Advanced* option is a refined search that gives you a combination of including or excluding criteria, searching by key, or by lookup type. 
-For more information on using the search, refer to the xref:assembly-controller-search[Search] section.
+For more information about using the search, see the xref:assembly-controller-search[Search] section.
 
 include::platform/con-controller-inventory-sync-jobs.adoc[leveloffset=+1]
 include::platform/ref-controller-inventory-sync-details.adoc[leveloffset=+2]
