--- a/downstream/assemblies/eda/assembly-eda-decision-environments.adoc
+++ b/downstream/assemblies/eda/assembly-eda-decision-environments.adoc
@@ -2,11 +2,11 @@
 
 = Decision environments
 
-Decision environments are a container image to run Ansible rulebooks.
-They create a common language for communicating automation dependencies, and provide a standard way to build and distribute the automation environment.
-The default decision environment is found in the link:https://quay.io/repository/ansible/ansible-rulebook[Ansible-Rulebook]. 
+Decision environments are a container image to run Ansible Rulebook rulebooks.
+They create a common language for communicating automation dependencies, and give a standard way to build and distribute the automation environment.
+You can find the default decision environment in the link:https://quay.io/repository/ansible/ansible-rulebook[Ansible-Rulebook]. 
 
-To create your own decision environment refer to xref:eda-build-a-custom-decision-environment[Building a custom decision environment for Event-Driven Ansible within Ansible Automation Platform].
+To create your own decision environment see xref:eda-build-a-custom-decision-environment[Building a custom decision environment for Event-Driven Ansible within Ansible Automation Platform].
 
-include::eda/proc-eda-set-up-new-decision-environment.adoc[leveloffset=+1]
 include::eda/proc-eda-build-a-custom-decision-environment.adoc[leveloffset=+1]
+include::eda/proc-eda-set-up-new-decision-environment.adoc[leveloffset=+1]
