--- a/downstream/modules/eda/proc-eda-view-rule-audit-actions.adoc
+++ b/downstream/modules/eda/proc-eda-view-rule-audit-actions.adoc
@@ -8,4 +8,4 @@
 . Select the desired rule, then select the *Actions* tab.
 
 From here you can view executed actions that were taken.
-Some actions are linked out to {ControllerName} where you can view the output.
+Some actions are linked out to {MenuTopAE} where you can view the output.
