Added new chapter and sub-chapters for SER

--- a/downstream/attributes/attributes.adoc
+++ b/downstream/attributes/attributes.adoc
@@ -214,9 +214,10 @@
 // FYI Automation Execution and Automation Decisions Projects will be under 1 selection in the 2.5-next or later.
 :MenuADProjects: menu:{MenuAD}[Projects]
 :MenuADDecisionEnvironments: menu:{MenuAD}[Decision Environments]
-:MenuADWebhooks: menu:{MenuAD}[Webhooks]
+:MenuADEventStreams: menu:{MenuAD}[Event Streams]
 :MenuADCredentials: menu:{MenuAD}[Infrastructure > Credentials]
 :MenuADCredentialType: menu:{MenuAD}[Infrastructure > Credential Types]
+
 
 
 // Automation Content (aka automation hub menu selections)
