--- a/downstream/modules/eda/proc-eda-set-up-rhaap-credential.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-rhaap-credential.adoc
@@ -12,9 +12,9 @@ You can create a {PlatformName} credential type to run your rulebook activations
 
 .Procedure
 
-. Log in to the {PlatformName} Dashboard.
+. Log in to the {PlatformNameShort}.
 . From the navigation panel, select {MenuADCredentials}.
-. Go to *Create Credentials*.
+. Click btn:[Create credential].
 . Insert the following:
 +
 Name:: Insert the name.
@@ -35,11 +35,6 @@ For {EDAcontroller} 2.5 with {ControllerName} 2.4, use the following example: ht
 For {PlatformNameShort} {PlatformVers}, use the following example: https://<your_gateway_host>/api/controller/
 ====
 . Enter a valid *Username* and *Password* or *Oauth Token*. 
-. Click btn:[Create controller token].
+. Click btn:[Create credential].
 
-After saving the credential, the credentials Details page is displayed. From there or the Credentials list view, you can edit or delete it.
-
-[NOTE]
-====
-After you have saved the credential type for your credential, it cannot be changed.
-====
+After you create this credential, you can use it for configuring your rulebook activations.
