--- a/downstream/assemblies/eda/assembly-simplified-event-routing.adoc
+++ b/downstream/assemblies/eda/assembly-simplified-event-routing.adoc
@@ -8,13 +8,18 @@ Simplified event routing enables {EDAcontroller} to capture and analyze data fro
 Event streams are an easy way to connect your sources to your rulebooks. This capability lets you create a single endpoint to receive alerts from an event source and then use the events in multiple rulebooks.
 
 include::eda/con-event-streams.adoc[leveloffset=+1]
+include::eda/proc-eda-create-event-stream-credential.adoc[leveloffset=+1]
+include::eda/proc-eda-create-event-stream.adoc[leveloffset=+1]
+include::eda/proc-eda-config-remote-sys-to-events.adoc[leveloffset=+1]
+include::eda/proc-eda-verify-event-streams-work.adoc[leveloffset=+1]
+
 
 
 
 [role="_additional-resources"]
 .Additional resources
 * 
-* For more detailed information on Ansible rulebooks, see the section on link:https://ansible.readthedocs.io/projects/rulebook/en/stable/rulebooks.html[Rulebooks] in the link:https://ansible.readthedocs.io/projects/rulebook/en/latest/[Ansible Rulebook documentation]. 
+//* For more detailed information on Ansible rulebooks, see the section on link:https://ansible.readthedocs.io/projects/rulebook/en/stable/rulebooks.html[Rulebooks] in the link:https://ansible.readthedocs.io/projects/rulebook/en/latest/[Ansible Rulebook documentation]. 
 
 
 
