AAP-29097 Corrected ID for Configuring remote systems procedure

--- a/downstream/modules/eda/proc-eda-config-remote-sys-to-events.adoc
+++ b/downstream/modules/eda/proc-eda-config-remote-sys-to-events.adoc
@@ -1,4 +1,4 @@
-[id="eda-config-remote-sys-to-events.adoc"] 
+[id="eda-config-remote-sys-to-events"] 
 
 = Configuring your remote system to send events
 
