AAP-29097 Last chapter additions before completing final topics

--- a/downstream/assemblies/eda/assembly-simplified-event-routing.adoc
+++ b/downstream/assemblies/eda/assembly-simplified-event-routing.adoc
@@ -16,9 +16,8 @@ include::eda/proc-eda-replace-sources-with-event-streams.adoc[leveloffset=+1]
 include::eda/con-event-streams-attachment-activations.adoc[leveloffset=+1]
 
 
-
-[role="_additional-resources"]
-.Additional resources
+//[role="_additional-resources"]
+//.Additional resources
 * 
 //* For more detailed information on Ansible rulebooks, see the section on link:https://ansible.readthedocs.io/projects/rulebook/en/stable/rulebooks.html[Rulebooks] in the link:https://ansible.readthedocs.io/projects/rulebook/en/latest/[Ansible Rulebook documentation]. 
 
