--- a/downstream/modules/eda/con-event-streams-attachment-activations.adoc
+++ b/downstream/modules/eda/con-event-streams-attachment-activations.adoc
@@ -1,7 +1,7 @@
 
 [id="eda-event-streams-attachment"]
 
-= Event streams
+= Attaching an event stream to a rulebook activation
 
 [role="_abstract"]
 Event streams can send events from remote systems to {EDAcontroller}. In a typical set-up, a server sends data to an event stream over the internet to an {EDAName} event stream receiver. When the data comes over the internet, the request must be authenticated. Depending on the webhook vendor or remote system, the authentication method could differ.
