--- a/downstream/modules/eda/proc-eda-replace-sources-with-event-streams.adoc
+++ b/downstream/modules/eda/proc-eda-replace-sources-with-event-streams.adoc
@@ -1,6 +1,6 @@
 [id="eda-replace-sources-with-event-streams"] 
 
-= Creating an event stream
+= Replacing sources with event streams in rulebook activations
 
 You can create event streams that will be attached to a rulebook activation. 
 
