Adding correct link to Users section
Pre-release updates to Using automation execution

https://issues.redhat.com/browse/AAP-31370

Affects `titles/controller-user-guide`

--- a/downstream/modules/platform/proc-controller-add-users-job-templates.adoc
+++ b/downstream/modules/platform/proc-controller-add-users-job-templates.adoc
@@ -9,19 +9,20 @@
 . Click the *User Access* tab.
 You can see users and teams associated with this credential and their roles.
 If no users exist, add them from the *Users* menu.
-For more information, see TBD[Users].
+For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/access_management_and_authentication/gw-managing-access#assembly-controller-users_gw-manage-rbac[Users].
+
 . Select the user(s) that you want to give access to the credential and click btn:[Next].
 . From the *Select roles to apply* page, select the roles you want to add to the User.
 . Click btn:[Next].
 . Review your selections and click btn:[Finish] to add the roles or click btn:[Back] to make changes.
 +
-The *Add roles* window displays stating whether the action was succesful.
+The *Add roles* window displays stating whether the action was successful.
 +
 If the action is not successful, a warning displays.
 + 
 . Click btn:[Close]. 
 . The *User Access* page displays the summary information.
-. Select the *Job templates* tab to choose a job template to which you want to assign this credential.
+. Select the *Job templates* tab to select a job template to which you want to assign this credential.
 . Chose a job template or select *Create job template* from the *Create template* list to assign the credential to additional job templates.
 +
 For more information about creating new job templates, see the xref:controller-job-templates[Job templates] section.
