--- a/downstream/assemblies/hub/assembly-syncing-to-cloud-repo.adoc
+++ b/downstream/assemblies/hub/assembly-syncing-to-cloud-repo.adoc
@@ -11,7 +11,7 @@ As of the 2.4 release you can still synchronize content, but synclists are depre
 ====
 
 [discrete]
-== What’s the difference between {Galaxy} and {HubNameMain}?
+== What's the difference between {Galaxy} and {HubNameMain}?
 
 Collections published to {Galaxy} are the latest content published by the Ansible community and have no joint support claims associated with them. 
 {Galaxy} is the recommended frontend directory for the Ansible community to access content.
