--- a/downstream/titles/release-notes/topics/aap-25.adoc
+++ b/downstream/titles/release-notes/topics/aap-25.adoc
@@ -2,6 +2,7 @@
 // Save the renamed copy of this file to the release-notes/topics directory topic files for the release notes reside.
 //Only include release note types that have updates for a given release. For example, if there are no Technology previews for the release, remove that section from this file.
 
+[id="new-features"]
 = New features and enhancements
 
 == Installation changes
@@ -80,7 +81,7 @@ You can use a newly installed version of {EDAName} from {PlatformNameShort} 2.5 
 * 2.4 {PlatformNameShort} version of {ControllerName} (4.4 or 4.5)
 * 2.5 {PlatformNameShort} version of {EDAName} (1.1)
 
-You can only use new installations of {EDAName} in this configuration. RPM-based hybrid deployments are fully supported by Red Hat. See *Install and configure {EDAName} 1.1 with {ControllerName} 4.4 or 4.5* in link:https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.4/html-single/using_event-driven_ansible_2.5_with_ansible_automation_platform_2.4/index[{EDAName} 2.5 with {ControllerName} 2.4] for details on setting up this configuration.
+You can only use new installations of {EDAName} in this configuration. RPM-based hybrid deployments are fully supported by Red Hat. For details on setting up this configuration, see the chapter *Installing {EDAController} 1.1 and configuring {ControllerName} 4.4 or 4.5* in the link:{BaseURL}/red_hat_ansible_automation_platform/2.4/html/using_event-driven_ansible_2.5_with_ansible_automation_platform_2.4[Using Event-Driven Ansible 2.5 with Ansible Automation Platform 2.4] guide.
 
 A hybrid configuration means you can install a new {EDAName} service and configure rulebook activations to execute job templates on a 2.4 version of the {ControllerName}.
 
