--- a/downstream/titles/release-notes/topics/docs-25.adoc
+++ b/downstream/titles/release-notes/topics/docs-25.adoc
@@ -7,7 +7,7 @@
 
 The following are documentation enhancements in {PlatformNameShort} 2.5:
 
-* The _Setting up an {ControllerName} token_ chapter that previously existed has been deprecated and replaced with the link:https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.4/html-single/using_event-driven_ansible_2.5_with_ansible_automation_platform_2.4/index[Setting up a Red Hat Ansible Automation Platform credential] section. (give URL here, it's a placeholder for now.). As the {EDAcontroller} is now integrated with centralized authentication and the Platform UI, this method simplifies the authentication process required for rulebook activations moving forward. 
+* The _Setting up an {ControllerName} token_ chapter that previously existed has been deprecated and replaced with the link:https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.5/html-single/using_automation_decisions/index#eda-set-up-rhaap-credential-type[Setting up a Red Hat Ansible Automation Platform credential] topic. As the {EDAcontroller} is now integrated with centralized authentication and the Platform UI, this method simplifies the authentication process required for rulebook activations moving forward. 
 
 * Documentation changes for 2.5 reflect terminology and product changes. Additionally, we have consolidated content into fewer documents. 
 +
