AAP-31661: Created AAP 2.5 Release Notes (#2034)
* AAP-31661: Created AAP 2.5 Release Notes

* AAP-31661: Incorporated updates to AAP 2.5 release notes

* AAP-31661: Resolved a typo in master.adoc file

* AAP-31661: Incorporated peer review feedback

* AAP-31661: Incorporated revision updates and link changes

--- a/downstream/titles/release-notes/topics/platform-intro.adoc
+++ b/downstream/titles/release-notes/topics/platform-intro.adoc
@@ -1,22 +1,25 @@
 [[platform-introduction]]
 = Overview of {PlatformName}
 
-{PlatformName} simplifies the development and operation of automation workloads for managing enterprise application infrastructure lifecycles.
-{PlatformNameShort} works across multiple IT domains including operations, networking, security, and development, as well as across diverse hybrid environments.
-Simple to adopt, use, and understand, {PlatformNameShort} provides the tools needed to rapidly implement enterprise-wide automation, no matter where you are in your automation journey.
+{PlatformName} simplifies the development and operation of automation workloads for managing enterprise application infrastructure lifecycles. {PlatformNameShort} works across multiple IT domains, including operations, networking, security, and development, as well as across diverse hybrid environments. Simple to adopt, use, and understand, {PlatformNameShort} provides the tools needed to rapidly implement enterprise-wide automation, no matter where you are in your automation journey.
+
+== Upgrades are unsupported at this time
+At the initial release of {PlatformNameShort} 2.5, upgrades from earlier releases are unsupported. Only new installations are supported. Upgrade support will follow shortly after the initial 2.5 release. However, you can deploy {EDAName} 2.5 with an existing 2.4 {ControllerName}. For more information, see xref:aap-25.adoc#eda-2.5-with-automation-controller-2.4[{EDAName} 2.5 with {ControllerName} 2.4]
 
 [[whats-included]]
-== What is included in {PlatformNameShort}
+== What is included in the {PlatformNameShort}
 
-[cols="a,a,a,a,a"]
+[%header, cols="a,a,a,a,a,a"]
 |===
-| {PlatformNameShort} | {ControllerNameStart} | {HubNameStart} | {EDAcontroller} | {InsightsShort}
+| {PlatformNameShort} | {ControllerNameStart} | {HubNameStart} | {EDAcontroller} | {InsightsShort} | Platform gateway +
+(Unified UI)
 
-|2.4 | 4.4|
-* 4.7
+|2.5 | 4.6.0|
+* 4.10.0
 * hosted service|
-1.0
+1.1.0
 | hosted service
+| 1.1
 
 |===
 
@@ -24,13 +27,3 @@ Simple to adopt, use, and understand, {PlatformNameShort} provides the tools nee
 
 Red Hat provides different levels of maintenance for each {PlatformNameShort} release. For more information, see link:https://access.redhat.com/support/policy/updates/ansible-automation-platform[{PlatformName} Life Cycle].
 
-== Upgrading {PlatformNameShort}
-
-When upgrading, do not use `yum update`. Use the installation program instead. The installation program performs all of the necessary actions required to upgrade to the latest versions of {PlatformNameShort}, including {ControllerName} and {PrivateHubName}.
-
-.Additional resources
-* For information about the components included in {PlatformNameShort}, see the table in xref:whats-included[What is included in {PlatformNameShort}].
-
-* For more information about upgrading {PlatformNameShort}, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_upgrade_and_migration_guide/index[{PlatformName} upgrade and migration guide].
-
-* For procedures related to using the {PlatformNameShort} installer, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_installation_guide/index[{PlatformNameShort} installation guide].
