gsfix Removed extraneous closing bracket

--- a/downstream/assemblies/platform/assembly-gs-auto-dev.adoc
+++ b/downstream/assemblies/platform/assembly-gs-auto-dev.adoc
@@ -53,5 +53,5 @@ include::eda/proc-eda-restart-rulebook-activations.adoc[leveloffset=+2]
 include::eda/proc-eda-delete-rulebook-activations.adoc[leveloffset=+2]
 include::eda/proc-eda-activate-webhook.adoc[leveloffset=+2]
 
-ifdef::parent-context-of-assembly-gs-auto-dev[:context: {parent-context-of-assembly-gs-auto-dev}}]
+ifdef::parent-context-of-assembly-gs-auto-dev[:context: {parent-context-of-assembly-gs-auto-dev}]
 ifndef::parent-context-of-assembly-gs-auto-dev[:!context:]
