link fixes for gs with aap guide

--- a/downstream/modules/platform/con-gs-playbooks.adoc
+++ b/downstream/modules/platform/con-gs-playbooks.adoc
@@ -8,5 +8,5 @@ A playbook runs tasks in order from top to bottom. Within each play, tasks also 
 
 Playbooks with multiple “plays” can orchestrate multi-machine deployments, running one play on your web servers, another play on your database servers, and a third play on your network infrastructure.
 
-For more information, see [ADD 2.5 LINK]Getting started with Ansible Playbooks.
+For more information, see link:{LinkPlaybooksGettingStarted}.
 
