updates to working with namespaces assembly

--- a/downstream/assemblies/hub/assembly-managing-collections-hub.adoc
+++ b/downstream/assemblies/hub/assembly-managing-collections-hub.adoc
@@ -13,7 +13,7 @@ As a content creator, you can use namespaces in {HubName} to curate and manage c
 * Upload collections to the namespace
 * Review the namespace import logs to determine the success or failure of uploading the collection and its current approval status
 
-For information on creating content, see the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_creator_guide/index[{PlatformName} Creator Guide].
+For information on creating content, see the link:{LinkDevelopAutomationContent}.
 
 include::assembly-working-with-namespaces.adoc[leveloffset=+1]
 include::assembly-managing-private-collections.adoc[leveloffset=+1]
