--- a/downstream/modules/hub/proc-uploading-collections.adoc
+++ b/downstream/modules/hub/proc-uploading-collections.adoc
@@ -13,15 +13,18 @@ Format your collection file name as follows: <my_namespace-my_collection-1.0.0.t
 .Prerequisites
 * You have a namespace to which you can upload the collection.
 
-
 .Procedure
-//[ddacosta] For 2.5 this will be Log in to Ansible Automation Platform and select Automation Content. Automation hub opens in a new tab. From the navigation ...
+
 . Log in to {PlatformNameShort}.
 . From the navigation panel, select {MenuACNamespaces} and select a namespace.
 . Select the *Collections* tab.
 . Click btn:[Upload collection].
-. Click btn:[Select file] from the *New collection* dialog.
+. Click btn:[Browse] next to the *Collection file* field.
 . Select the collection to upload.
-. Click btn:[Upload].
+. Select one of the following options:
+* *Staging repos* 
+* *Repositories without pipeline*
+. Click btn:[Upload collection].
 
-The *My Imports* screen shows a summary of tests and notifies you if the collection uploaded successfully or if it failed.
+.Verification
+To verify whether the collection uploaded successfully or if it failed, navigate to {MenuACNamespaces} and click the btn:[More Actions] icon *{MoreActionsIcon}*, then select *Imports*. There you will find a summary of tests indicating whether the import was successful.
